--- a/llm_from_scratch/c2/c2.ipynb
+++ b/llm_from_scratch/c2/c2.ipynb
@@ -2,15 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of character: 20479\n",
+      "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so it was no \n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
+    "import llm_from_scratch.c2\n",
     "\n",
-    "VERDICT = Path(__file__).with_name(\"the-verdict.txt\")\n",
     "\n",
-    "print(VERDICT)"
+    "VERDICT_PATH = Path(llm_from_scratch.c2.__file__).with_name(\"the-verdict.txt\")\n",
+    "\n",
+    "raw_text = VERDICT_PATH.read_text()\n",
+    "print(\"Total number of character:\", len(raw_text))\n",
+    "print(raw_text[:99])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello,', 'world.', 'This,', 'is', 'a', 'test.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "text = \"Hello, world. This, is a test.\"\n",
+    "result = re.split(r\"(\\s)\", text)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', ',', '', ' ', 'world', '.', '', ' ', 'This', ',', '', ' ', 'is', ' ', 'a', ' ', 'test', '.', '']\n",
+      "['Hello', ',', 'world', '.', 'This', ',', 'is', 'a', 'test', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.split(r\"([,.|\\s])\", text)\n",
+    "print(result)\n",
+    "\n",
+    "result = [word for word in result if word.strip()]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', ',', 'world', '.', 'Is this', '--', 'a test', '?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello, world. Is this-- a test?\"\n",
+    "result = re.split(r'([,.:;?_!\"()\\']|--|\\\\s)', text)\n",
+    "result = [item.strip() for item in result if item.strip()]\n",
+    "print(result)"
    ]
   }
  ],
@@ -19,6 +95,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
