Get auto-complete in ipynb to work

--- a/llm_from_scratch/c2/c2.ipynb
+++ b/llm_from_scratch/c2/c2.ipynb
@@ -88,6 +88,17 @@
     "result = [item.strip() for item in result if item.strip()]\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "torch.tensor"
+   ]
   }
  ],
  "metadata": {
