--- a/llm_from_scratch/c2/c2.ipynb
+++ b/llm_from_scratch/c2/c2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,21 +21,21 @@
     "\n",
     "VERDICT_PATH = Path(llm_from_scratch.c2.__file__).with_name(\"the-verdict.txt\")\n",
     "\n",
-    "raw_text = VERDICT_PATH.read_text()\n",
-    "print(\"Total number of character:\", len(raw_text))\n",
-    "print(raw_text[:99])"
+    "RAW_VERDICT_TEXT = VERDICT_PATH.read_text()\n",
+    "print(\"Total number of character:\", len(RAW_VERDICT_TEXT))\n",
+    "print(RAW_VERDICT_TEXT[:99])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hello,', 'world.', 'This,', 'is', 'a', 'test.']\n"
+      "['Hello,', ' ', 'world.', ' ', 'This,', ' ', 'is', ' ', 'a', ' ', 'test.']\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,33 +71,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def tokenize(text : str) -> list[str]:\n",
+    "    result = re.split(r'([,.:;?_!\"\\(\\)\\']|--|\\s)', text)\n",
+    "    result = [item.strip() for item in result]\n",
+    "    result = [item for item in result if item]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hello', ',', 'world', '.', 'Is this', '--', 'a test', '?']\n"
+      "['Hello', ',', 'world', '.', 'Is', 'this', '--', 'a', 'test', '?']\n"
      ]
     }
    ],
    "source": [
     "text = \"Hello, world. Is this-- a test?\"\n",
-    "result = re.split(r'([,.:;?_!\"()\\']|--|\\\\s)', text)\n",
-    "result = [item.strip() for item in result if item.strip()]\n",
-    "print(result)"
+    "print(tokenize(text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The verdict has this many tokens: 4690\n"
+     ]
+    }
+   ],
+   "source": [
+    "VERDICT_TOKENS = tokenize(RAW_VERDICT_TEXT)\n",
+    "print(\"The verdict has this many tokens:\", len(VERDICT_TOKENS))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'HAD', 'always', 'thought', 'Jack', 'Gisburn', 'rather', 'a', 'cheap', 'genius', '--', 'though', 'a', 'good', 'fellow', 'enough', '--', 'so', 'it', 'was', 'no', 'great', 'surprise', 'to', 'me', 'to', 'hear', 'that', ',', 'in']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(VERDICT_TOKENS[:30])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size is: 1130\n"
+     ]
+    }
+   ],
+   "source": [
+    "ALL_WORDS = sorted(set(VERDICT_TOKENS))\n",
+    "VOCAB_SIZE = len(ALL_WORDS)\n",
+    "print(\"Vocabulary size is:\", VOCAB_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "VOCAB = {word : idx for idx, word in enumerate(ALL_WORDS)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('!', 0)\n",
+      "('\"', 1)\n",
+      "(\"'\", 2)\n",
+      "('(', 3)\n",
+      "(')', 4)\n",
+      "(',', 5)\n",
+      "('--', 6)\n",
+      "('.', 7)\n",
+      "(':', 8)\n",
+      "(';', 9)\n",
+      "('?', 10)\n",
+      "('A', 11)\n",
+      "('Ah', 12)\n",
+      "('Among', 13)\n",
+      "('And', 14)\n",
+      "('Are', 15)\n",
+      "('Arrt', 16)\n",
+      "('As', 17)\n",
+      "('At', 18)\n",
+      "('Be', 19)\n",
+      "('Begin', 20)\n",
+      "('Burlington', 21)\n",
+      "('But', 22)\n",
+      "('By', 23)\n",
+      "('Carlo', 24)\n",
+      "('Chicago', 25)\n",
+      "('Claude', 26)\n",
+      "('Come', 27)\n",
+      "('Croft', 28)\n",
+      "('Destroyed', 29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item, _ in zip(VOCAB.items(), range(30)):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleTokenizerV1:\n",
+    "    def __init__(self, vocab : dict[str, int]) -> None:\n",
+    "        self.str_to_int = vocab            #1\n",
+    "        self.int_to_str = {i:s for s,i in vocab.items()}        #2\n",
     "\n",
-    "torch.tensor"
+    "    def encode(self, text : str) -> list[int]:         #3\n",
+    "        preprocessed = re.split(r'([,.:;?_!\\\"\\(\\)\\']|--|\\s)', text)\n",
+    "        preprocessed = [item.strip() for item in preprocessed]\n",
+    "        preprocessed = [item for item in preprocessed if item]\n",
+    "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+    "        return ids\n",
+    "\n",
+    "    def decode(self, ids : list[int]) -> str:         #4\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids]) \n",
+    "        text = re.sub(r'\\s+([,.?!\\\"\\(\\)\\'])', r'\\1', text)    #5\n",
+    "        return text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOKENIZER = SimpleTokenizerV1(VOCAB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ids are:\n",
+      "[1, 56, 2, 850, 988, 602, 533, 746, 5, 1126, 596, 5, 1, 67, 7, 38, 851, 1108, 754, 793, 7]\n",
+      "The decoded text is:\n",
+      "\" It' s the last he painted, you know,\" Mrs. Gisburn said with pardonable pride.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\"\"It's the last he painted, you know,\" \n",
+    "       Mrs. Gisburn said with pardonable pride.\"\"\"\n",
+    "ids = TOKENIZER.encode(text)\n",
+    "\n",
+    "print(\"The ids are:\")\n",
+    "print(ids)\n",
+    "\n",
+    "print(\"The decoded text is:\")\n",
+    "print(TOKENIZER.decode(ids))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Hello'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mTOKENIZER\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello, do you like tea?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[11], line 10\u001b[0m, in \u001b[0;36mSimpleTokenizerV1.encode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m      8\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m      9\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed \u001b[38;5;28;01mif\u001b[39;00m item]\n\u001b[0;32m---> 10\u001b[0m ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstr_to_int\u001b[49m\u001b[43m[\u001b[49m\u001b[43ms\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ids\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Hello'"
+     ]
+    }
+   ],
+   "source": [
+    "TOKENIZER.encode(\"Hello, do you like tea?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of ALL_WORDS is <class 'list'>\n",
+      "Length of all words is 1132\n",
+      "Vocab size is: 1132\n",
+      "('younger', 1127)\n",
+      "('your', 1128)\n",
+      "('yourself', 1129)\n",
+      "('<|endoftext|>', 1130)\n",
+      "('<|unk|>', 1131)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ALL_WORDS = sorted(set(VERDICT_TOKENS))\n",
+    "print(\"Type of ALL_WORDS is\", type(ALL_WORDS))\n",
+    "ALL_WORDS += [\"<|endoftext|>\", \"<|unk|>\"]\n",
+    "print(\"Length of all words is\", len(ALL_WORDS))\n",
+    "VOCAB = {word : idx for idx, word in enumerate(ALL_WORDS)}\n",
+    "\n",
+    "print(\"Vocab size is:\", len(VOCAB))\n",
+    "\n",
+    "for i, item in enumerate(list(VOCAB.items())[-5:]):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleTokenizerV2:\n",
+    "    def __init__(self, vocab : dict[str, int]) -> None:\n",
+    "        self.str_to_int = vocab            #1\n",
+    "        self.int_to_str = {i:s for s,i in vocab.items()}        #2\n",
+    "        self.unk_idx = self.str_to_int[\"<|unk|>\"]\n",
+    "\n",
+    "    def encode(self, text : str) -> list[int]:         #3\n",
+    "        preprocessed = re.split(r'([,.:;?_!\\\"\\(\\)\\']|--|\\s)', text)\n",
+    "        preprocessed = [item.strip() for item in preprocessed]\n",
+    "        preprocessed = [item for item in preprocessed if item]\n",
+    "        ids = [self.str_to_int.get(s, self.unk_idx) for s in preprocessed]\n",
+    "        return ids\n",
+    "\n",
+    "    def decode(self, ids : list[int]) -> str:         #4\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids]) \n",
+    "        text = re.sub(r'\\s+([,.?!\\\"\\(\\)\\'])', r'\\1', text)    #5\n",
+    "        return text\n",
+    "\n",
+    "\n",
+    "TOKENIZER = SimpleTokenizerV2(VOCAB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, do you like tea? <|endoftext|> In the sunlit terraces of the palace.\n",
+      "Encoded text:\n",
+      "[1131, 5, 355, 1126, 628, 975, 10, 1130, 55, 988, 956, 984, 722, 988, 1131, 7]\n",
+      "Decoded text:\n",
+      "<|unk|>, do you like tea? <|endoftext|> In the sunlit terraces of the <|unk|>.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1 = \"Hello, do you like tea?\"\n",
+    "text2 = \"In the sunlit terraces of the palace.\"\n",
+    "text = \" <|endoftext|> \".join((text1, text2))\n",
+    "print(text)\n",
+    "\n",
+    "encoded = TOKENIZER.encode(text)\n",
+    "decoded = TOKENIZER.decode(encoded)\n",
+    "\n",
+    "print(\"Encoded text:\")\n",
+    "print(encoded)\n",
+    "\n",
+    "print(\"Decoded text:\")\n",
+    "print(decoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tiktoken version method 1: 0.8.0 0.8.0\n",
+      "sentencepiece version 0.2.0 0.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "import sentencepiece\n",
+    "from importlib.metadata import version\n",
+    "\n",
+    "print(\"tiktoken version method 1:\", version(\"tiktoken\"), tiktoken.__version__)\n",
+    "\n",
+    "\n",
+    "print(\"sentencepiece version\", version(\"sentencepiece\"), sentencepiece.__version__)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sene' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m GPT2_TOKENIZER \u001b[38;5;241m=\u001b[39m tiktoken\u001b[38;5;241m.\u001b[39mget_encoding(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m SP_TOKENIZER \u001b[38;5;241m=\u001b[39m \u001b[43msene\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sene' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "GPT2_TOKENIZER = tiktoken.get_encoding(\"gpt2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoded text is: \n",
+      "[15496, 11, 466, 345, 588, 8887, 30, 220, 50256, 554, 262, 4252, 18250, 8812, 2114, 1659, 617, 34680, 27271, 13]\n",
+      "Decoded text is: \n",
+      "Hello, do you like tea? <|endoftext|> In the sunlit terracesof someunknownPlace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = (\n",
+    "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
+    "     \"of someunknownPlace.\"\n",
+    ")\n",
+    "\n",
+    "integers = GPT2_TOKENIZER.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+    "print(\"Encoded text is: \")\n",
+    "print(integers)\n",
+    "\n",
+    "decoded = GPT2_TOKENIZER.decode(integers)\n",
+    "print(\"Decoded text is: \")\n",
+    "print(decoded)"
    ]
   }
  ],
