--- a/llm_from_scratch/c2/c2.ipynb
+++ b/llm_from_scratch/c2/c2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +285,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mTOKENIZER\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello, do you like tea?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[11], line 10\u001b[0m, in \u001b[0;36mSimpleTokenizerV1.encode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m      8\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m      9\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed \u001b[38;5;28;01mif\u001b[39;00m item]\n\u001b[0;32m---> 10\u001b[0m ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstr_to_int\u001b[49m\u001b[43m[\u001b[49m\u001b[43ms\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ids\n",
+      "Cell \u001b[0;32mIn[50], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mTOKENIZER\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello, do you like tea?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[47], line 10\u001b[0m, in \u001b[0;36mSimpleTokenizerV1.encode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m      8\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m      9\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed \u001b[38;5;28;01mif\u001b[39;00m item]\n\u001b[0;32m---> 10\u001b[0m ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstr_to_int\u001b[49m\u001b[43m[\u001b[49m\u001b[43ms\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ids\n",
       "\u001b[0;31mKeyError\u001b[0m: 'Hello'"
      ]
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -391,54 +391,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tiktoken version method 1: 0.8.0 0.8.0\n",
-      "sentencepiece version 0.2.0 0.2.0\n"
+      "tiktoken version method 1: 0.8.0 0.8.0\n"
      ]
     }
    ],
    "source": [
     "import tiktoken\n",
-    "import sentencepiece\n",
     "from importlib.metadata import version\n",
     "\n",
     "print(\"tiktoken version method 1:\", version(\"tiktoken\"), tiktoken.__version__)\n",
-    "\n",
-    "\n",
-    "print(\"sentencepiece version\", version(\"sentencepiece\"), sentencepiece.__version__)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sene' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m GPT2_TOKENIZER \u001b[38;5;241m=\u001b[39m tiktoken\u001b[38;5;241m.\u001b[39mget_encoding(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m SP_TOKENIZER \u001b[38;5;241m=\u001b[39m \u001b[43msene\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sene' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "GPT2_TOKENIZER = tiktoken.get_encoding(\"gpt2\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +448,429 @@
     "decoded = GPT2_TOKENIZER.decode(integers)\n",
     "print(\"Decoded text is: \")\n",
     "print(decoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33901, 86, 343, 86, 220, 959]\n",
+      "Akwirw ier\n"
+     ]
+    }
+   ],
+   "source": [
+    "enc = GPT2_TOKENIZER.encode(\"Akwirw ier\")\n",
+    "print(enc)\n",
+    "print(GPT2_TOKENIZER.decode(enc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens in the set: 5145\n",
+      "First sample\n",
+      "x: [290, 4920, 2241, 287]\n",
+      "y:      [4920, 2241, 287, 257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "enc_text = GPT2_TOKENIZER.encode(RAW_VERDICT_TEXT)\n",
+    "print(\"Tokens in the set:\", len(enc_text))\n",
+    "\n",
+    "enc_sample = enc_text[50:]\n",
+    "\n",
+    "print(\"First sample\")\n",
+    "context_size = 4         #1\n",
+    "x = enc_sample[:context_size]\n",
+    "y = enc_sample[1:context_size+1]\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"y:      {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[290] ----> 4920\n",
+      "[290, 4920] ----> 2241\n",
+      "[290, 4920, 2241] ----> 287\n",
+      "[290, 4920, 2241, 287] ----> 257\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(context, \"---->\", desired)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " and ---->  established\n",
+      " and established ---->  himself\n",
+      " and established himself ---->  in\n",
+      " and established himself in ---->  a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(GPT2_TOKENIZER.decode(context), \"---->\", GPT2_TOKENIZER.decode([desired]))  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from typing import Protocol\n",
+    "from torch.utils.data import Dataset\n",
+    "\n",
+    "\n",
+    "class Tokenizer(Protocol):\n",
+    "    def encode(self, value: str) -> list[int]:\n",
+    "        ...\n",
+    "    def decode(self, value: list[int]) -> str:\n",
+    "        ...\n",
+    "\n",
+    "\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt : str, tokenizer : Tokenizer, max_length : int, stride : int) -> None:\n",
+    "        self.input_ids = list[torch.Tensor]()\n",
+    "        self.target_ids = list[torch.Tensor]()\n",
+    "\n",
+    "        token_ids = tokenizer.encode(txt)    #1\n",
+    "\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):     #2\n",
+    "            input_chunk = token_ids[i:i + max_length]\n",
+    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.target_ids.append(torch.tensor(target_chunk))\n",
+    "\n",
+    "    def __len__(self) -> int:    #3\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx : int) -> tuple[torch.Tensor, torch.Tensor]:         #4\n",
+    "        return self.input_ids[idx], self.target_ids[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5140\n",
+      "(tensor([ 1807,  3619,   402,   271, 10899]), tensor([ 3619,   402,   271, 10899,  2138]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = GPTDatasetV1(RAW_VERDICT_TEXT, tokenizer=GPT2_TOKENIZER, max_length=5, stride=1)\n",
+    "\n",
+    "print(len(dataset))\n",
+    "print(dataset[4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "\n",
+    "def create_dataloader_v1(\n",
+    "    txt : str,\n",
+    "    batch_size: int=4,\n",
+    "    max_length: int=256,\n",
+    "    stride: int=128,\n",
+    "    shuffle: bool =True,\n",
+    "    drop_last: bool =True,\n",
+    "    num_workers: int=0,\n",
+    ") -> GPTDatasetV1:\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")                         #1\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)   #2\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=shuffle,\n",
+    "        drop_last=drop_last,     #3\n",
+    "        num_workers=num_workers     #4\n",
+    "    )\n",
+    "    return dataloader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  40,  367, 2885, 1464, 1807],\n",
+      "        [2885, 1464, 1807, 3619,  402]])\n",
+      "tensor([[ 367, 2885, 1464, 1807, 3619],\n",
+      "        [1464, 1807, 3619,  402,  271]])\n",
+      "--\n",
+      "tensor([[ 1807,  3619,   402,   271, 10899],\n",
+      "        [  402,   271, 10899,  2138,   257]])\n",
+      "tensor([[ 3619,   402,   271, 10899,  2138],\n",
+      "        [  271, 10899,  2138,   257,  7026]])\n",
+      "--\n",
+      "tensor([[10899,  2138,   257,  7026, 15632],\n",
+      "        [  257,  7026, 15632,   438,  2016]])\n",
+      "tensor([[ 2138,   257,  7026, 15632,   438],\n",
+      "        [ 7026, 15632,   438,  2016,   257]])\n",
+      "--\n",
+      "tensor([[15632,   438,  2016,   257,   922],\n",
+      "        [ 2016,   257,   922,  5891,  1576]])\n",
+      "tensor([[ 438, 2016,  257,  922, 5891],\n",
+      "        [ 257,  922, 5891, 1576,  438]])\n",
+      "--\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataloader = create_dataloader_v1(RAW_VERDICT_TEXT, batch_size=2, max_length=5, stride=2, shuffle=False)\n",
+    "\n",
+    "for item, _ in zip(dataloader, range(4)):\n",
+    "    x = item[0]\n",
+    "    y = item[1]\n",
+    "\n",
+    "    print(x)\n",
+    "    print(y)\n",
+    "    # 2 is for the num batches\n",
+    "    # 5 is the window size.\n",
+    "    assert y.shape == x.shape == torch.Size([2, 5])\n",
+    "    print(\"--\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[ 0.3374, -0.1778, -0.1690],\n",
+      "        [ 0.9178,  1.5810,  1.3010],\n",
+      "        [ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-1.1589,  0.3255, -0.6315],\n",
+      "        [-2.8400, -0.7849, -1.4096]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "vocab_size=6\n",
+    "output_dim=3\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "\n",
+    "# This might not match the book is using GPU!\n",
+    "print(embedding_layer.weight)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1]) torch.Size([1, 3])\n",
+      "tensor([[-0.4015,  0.9666, -1.1481]], grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([3])\n",
+    "y = embedding_layer(x)\n",
+    "print(x.shape, y.shape)\n",
+    "print(embedding_layer(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4]) torch.Size([4, 3])\n",
+      "tensor([[ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-2.8400, -0.7849, -1.4096],\n",
+      "        [ 0.9178,  1.5810,  1.3010]], grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([2, 3, 5, 1])\n",
+    "y = embedding_layer(x)\n",
+    "print(x.shape, y.shape)\n",
+    "print(embedding_layer(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token IDs:\n",
+      " tensor([[   40,   367,  2885,  1464],\n",
+      "        [ 1807,  3619,   402,   271],\n",
+      "        [10899,  2138,   257,  7026],\n",
+      "        [15632,   438,  2016,   257],\n",
+      "        [  922,  5891,  1576,   438],\n",
+      "        [  568,   340,   373,   645],\n",
+      "        [ 1049,  5975,   284,   502],\n",
+      "        [  284,  3285,   326,    11]])\n",
+      "Inputs shape:\n",
+      " torch.Size([8, 4])\n",
+      "torch.Size([8, 4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Embedding layer\n",
+    "vocab_size = 50257\n",
+    "output_dim = 256\n",
+    "token_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "\n",
+    "# Data loader\n",
+    "max_length = 4\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    RAW_VERDICT_TEXT, batch_size=8, max_length=max_length,\n",
+    "   stride=max_length, shuffle=False\n",
+    ")\n",
+    "\n",
+    "# print some examples\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Token IDs:\\n\", inputs)\n",
+    "print(\"Inputs shape:\\n\", inputs.shape)\n",
+    "\n",
+    "token_embeddings = token_embedding_layer(inputs)\n",
+    "print(token_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding the positional\n",
+    "context_length = max_length\n",
+    "pos_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
+    "\n",
+    "pos_embeddings = pos_embedding_layer(torch.arange(context_length))\n",
+    "print(pos_embeddings.shape)\n",
+    "\n",
+    "# print(pos_embeddings_layer.weight.shape) will also do the same\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([11])\n",
+      "tensor([11, 12])\n",
+      "tensor([[11],\n",
+      "        [13]])\n",
+      "tensor([[[11],\n",
+      "         [12]],\n",
+      "\n",
+      "        [[13],\n",
+      "         [14]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Torch allows adding like this. It adds the sub matrix to all the outer dim of the inner one.\n",
+    "\n",
+    "print(torch.tensor([1]) + torch.tensor([10]))\n",
+    "\n",
+    "print(torch.tensor([1, 2]) + torch.tensor([10]))\n",
+    "\n",
+    "print(torch.tensor([[1], [3]]) + torch.tensor([10]))\n",
+    "\n",
+    "print(torch.tensor([[[1], [2]], [[3], [4]]]) + torch.tensor([10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_embeddings = token_embeddings + pos_embeddings\n",
+    "print(input_embeddings.shape)"
    ]
   }
  ],
