--- a/llm_from_scratch/c2/c2.ipynb
+++ b/llm_from_scratch/c2/c2.ipynb
@@ -77,7 +77,8 @@
    "source": [
     "import re\n",
     "\n",
-    "def tokenize(text : str) -> list[str]:\n",
+    "\n",
+    "def tokenize(text: str) -> list[str]:\n",
     "    result = re.split(r'([,.:;?_!\"\\(\\)\\']|--|\\s)', text)\n",
     "    result = [item.strip() for item in result]\n",
     "    result = [item for item in result if item]\n",
@@ -162,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VOCAB = {word : idx for idx, word in enumerate(ALL_WORDS)}"
+    "VOCAB = {word: idx for idx, word in enumerate(ALL_WORDS)}"
    ]
   },
   {
@@ -219,21 +220,21 @@
    "outputs": [],
    "source": [
     "class SimpleTokenizerV1:\n",
-    "    def __init__(self, vocab : dict[str, int]) -> None:\n",
-    "        self.str_to_int = vocab            #1\n",
-    "        self.int_to_str = {i:s for s,i in vocab.items()}        #2\n",
+    "    def __init__(self, vocab: dict[str, int]) -> None:\n",
+    "        self.str_to_int = vocab  # 1\n",
+    "        self.int_to_str = {i: s for s, i in vocab.items()}  # 2\n",
     "\n",
-    "    def encode(self, text : str) -> list[int]:         #3\n",
-    "        preprocessed = re.split(r'([,.:;?_!\\\"\\(\\)\\']|--|\\s)', text)\n",
+    "    def encode(self, text: str) -> list[int]:  # 3\n",
+    "        preprocessed = re.split(r\"([,.:;?_!\\\"\\(\\)\\']|--|\\s)\", text)\n",
     "        preprocessed = [item.strip() for item in preprocessed]\n",
     "        preprocessed = [item for item in preprocessed if item]\n",
     "        ids = [self.str_to_int[s] for s in preprocessed]\n",
     "        return ids\n",
     "\n",
-    "    def decode(self, ids : list[int]) -> str:         #4\n",
-    "        text = \" \".join([self.int_to_str[i] for i in ids]) \n",
-    "        text = re.sub(r'\\s+([,.?!\\\"\\(\\)\\'])', r'\\1', text)    #5\n",
-    "        return text\n"
+    "    def decode(self, ids: list[int]) -> str:  # 4\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+    "        text = re.sub(r\"\\s+([,.?!\\\"\\(\\)\\'])\", r\"\\1\", text)  # 5\n",
+    "        return text"
    ]
   },
   {
@@ -270,7 +271,7 @@
     "print(ids)\n",
     "\n",
     "print(\"The decoded text is:\")\n",
-    "print(TOKENIZER.decode(ids))\n"
+    "print(TOKENIZER.decode(ids))"
    ]
   },
   {
@@ -320,7 +321,7 @@
     "print(\"Type of ALL_WORDS is\", type(ALL_WORDS))\n",
     "ALL_WORDS += [\"<|endoftext|>\", \"<|unk|>\"]\n",
     "print(\"Length of all words is\", len(ALL_WORDS))\n",
-    "VOCAB = {word : idx for idx, word in enumerate(ALL_WORDS)}\n",
+    "VOCAB = {word: idx for idx, word in enumerate(ALL_WORDS)}\n",
     "\n",
     "print(\"Vocab size is:\", len(VOCAB))\n",
     "\n",
@@ -335,21 +336,21 @@
    "outputs": [],
    "source": [
     "class SimpleTokenizerV2:\n",
-    "    def __init__(self, vocab : dict[str, int]) -> None:\n",
-    "        self.str_to_int = vocab            #1\n",
-    "        self.int_to_str = {i:s for s,i in vocab.items()}        #2\n",
+    "    def __init__(self, vocab: dict[str, int]) -> None:\n",
+    "        self.str_to_int = vocab  # 1\n",
+    "        self.int_to_str = {i: s for s, i in vocab.items()}  # 2\n",
     "        self.unk_idx = self.str_to_int[\"<|unk|>\"]\n",
     "\n",
-    "    def encode(self, text : str) -> list[int]:         #3\n",
-    "        preprocessed = re.split(r'([,.:;?_!\\\"\\(\\)\\']|--|\\s)', text)\n",
+    "    def encode(self, text: str) -> list[int]:  # 3\n",
+    "        preprocessed = re.split(r\"([,.:;?_!\\\"\\(\\)\\']|--|\\s)\", text)\n",
     "        preprocessed = [item.strip() for item in preprocessed]\n",
     "        preprocessed = [item for item in preprocessed if item]\n",
     "        ids = [self.str_to_int.get(s, self.unk_idx) for s in preprocessed]\n",
     "        return ids\n",
     "\n",
-    "    def decode(self, ids : list[int]) -> str:         #4\n",
-    "        text = \" \".join([self.int_to_str[i] for i in ids]) \n",
-    "        text = re.sub(r'\\s+([,.?!\\\"\\(\\)\\'])', r'\\1', text)    #5\n",
+    "    def decode(self, ids: list[int]) -> str:  # 4\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+    "        text = re.sub(r\"\\s+([,.?!\\\"\\(\\)\\'])\", r\"\\1\", text)  # 5\n",
     "        return text\n",
     "\n",
     "\n",
@@ -406,8 +407,7 @@
     "import tiktoken\n",
     "from importlib.metadata import version\n",
     "\n",
-    "print(\"tiktoken version method 1:\", version(\"tiktoken\"), tiktoken.__version__)\n",
-    "\n"
+    "print(\"tiktoken version method 1:\", version(\"tiktoken\"), tiktoken.__version__)"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GPT2_TOKENIZER = tiktoken.get_encoding(\"gpt2\")\n"
+    "GPT2_TOKENIZER = tiktoken.get_encoding(\"gpt2\")"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "source": [
     "text = (\n",
     "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
-    "     \"of someunknownPlace.\"\n",
+    "    \"of someunknownPlace.\"\n",
     ")\n",
     "\n",
     "integers = GPT2_TOKENIZER.encode(text, allowed_special={\"<|endoftext|>\"})\n",
@@ -493,9 +493,9 @@
     "enc_sample = enc_text[50:]\n",
     "\n",
     "print(\"First sample\")\n",
-    "context_size = 4         #1\n",
+    "context_size = 4  # 1\n",
     "x = enc_sample[:context_size]\n",
-    "y = enc_sample[1:context_size+1]\n",
+    "y = enc_sample[1 : context_size + 1]\n",
     "print(f\"x: {x}\")\n",
     "print(f\"y:      {y}\")"
    ]
@@ -517,7 +517,7 @@
     }
    ],
    "source": [
-    "for i in range(1, context_size+1):\n",
+    "for i in range(1, context_size + 1):\n",
     "    context = enc_sample[:i]\n",
     "    desired = enc_sample[i]\n",
     "    print(context, \"---->\", desired)"
@@ -540,10 +540,10 @@
     }
    ],
    "source": [
-    "for i in range(1, context_size+1):\n",
+    "for i in range(1, context_size + 1):\n",
     "    context = enc_sample[:i]\n",
     "    desired = enc_sample[i]\n",
-    "    print(GPT2_TOKENIZER.decode(context), \"---->\", GPT2_TOKENIZER.decode([desired]))  \n"
+    "    print(GPT2_TOKENIZER.decode(context), \"---->\", GPT2_TOKENIZER.decode([desired]))"
    ]
   },
   {
@@ -558,29 +558,29 @@
     "\n",
     "\n",
     "class Tokenizer(Protocol):\n",
-    "    def encode(self, value: str) -> list[int]:\n",
-    "        ...\n",
-    "    def decode(self, value: list[int]) -> str:\n",
-    "        ...\n",
+    "    def encode(self, value: str) -> list[int]: ...\n",
+    "    def decode(self, value: list[int]) -> str: ...\n",
     "\n",
     "\n",
     "class GPTDatasetV1(Dataset):\n",
-    "    def __init__(self, txt : str, tokenizer : Tokenizer, max_length : int, stride : int) -> None:\n",
+    "    def __init__(\n",
+    "        self, txt: str, tokenizer: Tokenizer, max_length: int, stride: int\n",
+    "    ) -> None:\n",
     "        self.input_ids = list[torch.Tensor]()\n",
     "        self.target_ids = list[torch.Tensor]()\n",
     "\n",
-    "        token_ids = tokenizer.encode(txt)    #1\n",
+    "        token_ids = tokenizer.encode(txt)  # 1\n",
     "\n",
-    "        for i in range(0, len(token_ids) - max_length, stride):     #2\n",
-    "            input_chunk = token_ids[i:i + max_length]\n",
-    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):  # 2\n",
+    "            input_chunk = token_ids[i : i + max_length]\n",
+    "            target_chunk = token_ids[i + 1 : i + max_length + 1]\n",
     "            self.input_ids.append(torch.tensor(input_chunk))\n",
     "            self.target_ids.append(torch.tensor(target_chunk))\n",
     "\n",
-    "    def __len__(self) -> int:    #3\n",
+    "    def __len__(self) -> int:  # 3\n",
     "        return len(self.input_ids)\n",
     "\n",
-    "    def __getitem__(self, idx : int) -> tuple[torch.Tensor, torch.Tensor]:         #4\n",
+    "    def __getitem__(self, idx: int) -> tuple[torch.Tensor, torch.Tensor]:  # 4\n",
     "        return self.input_ids[idx], self.target_ids[idx]"
    ]
   },
@@ -599,10 +599,12 @@
     }
    ],
    "source": [
-    "dataset = GPTDatasetV1(RAW_VERDICT_TEXT, tokenizer=GPT2_TOKENIZER, max_length=5, stride=1)\n",
+    "dataset = GPTDatasetV1(\n",
+    "    RAW_VERDICT_TEXT, tokenizer=GPT2_TOKENIZER, max_length=5, stride=1\n",
+    ")\n",
     "\n",
     "print(len(dataset))\n",
-    "print(dataset[4])\n"
+    "print(dataset[4])"
    ]
   },
   {
@@ -615,24 +617,24 @@
     "\n",
     "\n",
     "def create_dataloader_v1(\n",
-    "    txt : str,\n",
-    "    batch_size: int=4,\n",
-    "    max_length: int=256,\n",
-    "    stride: int=128,\n",
-    "    shuffle: bool =True,\n",
-    "    drop_last: bool =True,\n",
-    "    num_workers: int=0,\n",
+    "    txt: str,\n",
+    "    batch_size: int = 4,\n",
+    "    max_length: int = 256,\n",
+    "    stride: int = 128,\n",
+    "    shuffle: bool = True,\n",
+    "    drop_last: bool = True,\n",
+    "    num_workers: int = 0,\n",
     ") -> GPTDatasetV1:\n",
-    "    tokenizer = tiktoken.get_encoding(\"gpt2\")                         #1\n",
-    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)   #2\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")  # 1\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)  # 2\n",
     "    dataloader = DataLoader(\n",
     "        dataset,\n",
     "        batch_size=batch_size,\n",
     "        shuffle=shuffle,\n",
-    "        drop_last=drop_last,     #3\n",
-    "        num_workers=num_workers     #4\n",
+    "        drop_last=drop_last,  # 3\n",
+    "        num_workers=num_workers,  # 4\n",
     "    )\n",
-    "    return dataloader\n"
+    "    return dataloader"
    ]
   },
   {
@@ -668,7 +670,9 @@
     }
    ],
    "source": [
-    "dataloader = create_dataloader_v1(RAW_VERDICT_TEXT, batch_size=2, max_length=5, stride=2, shuffle=False)\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    RAW_VERDICT_TEXT, batch_size=2, max_length=5, stride=2, shuffle=False\n",
+    ")\n",
     "\n",
     "for item, _ in zip(dataloader, range(4)):\n",
     "    x = item[0]\n",
@@ -704,14 +708,14 @@
    "source": [
     "import torch\n",
     "\n",
-    "vocab_size=6\n",
-    "output_dim=3\n",
+    "vocab_size = 6\n",
+    "output_dim = 3\n",
     "\n",
     "torch.manual_seed(123)\n",
     "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
     "\n",
     "# This might not match the book is using GPU!\n",
-    "print(embedding_layer.weight)\n"
+    "print(embedding_layer.weight)"
    ]
   },
   {
@@ -732,7 +736,7 @@
     "x = torch.tensor([3])\n",
     "y = embedding_layer(x)\n",
     "print(x.shape, y.shape)\n",
-    "print(embedding_layer(x))\n"
+    "print(embedding_layer(x))"
    ]
   },
   {
@@ -756,7 +760,7 @@
     "x = torch.tensor([2, 3, 5, 1])\n",
     "y = embedding_layer(x)\n",
     "print(x.shape, y.shape)\n",
-    "print(embedding_layer(x))\n"
+    "print(embedding_layer(x))"
    ]
   },
   {
@@ -792,8 +796,11 @@
     "# Data loader\n",
     "max_length = 4\n",
     "dataloader = create_dataloader_v1(\n",
-    "    RAW_VERDICT_TEXT, batch_size=8, max_length=max_length,\n",
-    "   stride=max_length, shuffle=False\n",
+    "    RAW_VERDICT_TEXT,\n",
+    "    batch_size=8,\n",
+    "    max_length=max_length,\n",
+    "    stride=max_length,\n",
+    "    shuffle=False,\n",
     ")\n",
     "\n",
     "# print some examples\n",
@@ -827,7 +834,7 @@
     "pos_embeddings = pos_embedding_layer(torch.arange(context_length))\n",
     "print(pos_embeddings.shape)\n",
     "\n",
-    "# print(pos_embeddings_layer.weight.shape) will also do the same\n"
+    "# print(pos_embeddings_layer.weight.shape) will also do the same"
    ]
   },
   {
