Add gazelle and ray

--- a/llm_from_scratch/c3/c3.ipynb
+++ b/llm_from_scratch/c3/c3.ipynb
@@ -23,13 +23,16 @@
    ],
    "source": [
     "import torch\n",
+    "\n",
     "inputs = torch.tensor(\n",
-    "  [[0.43, 0.15, 0.89], # Your     (x^1)\n",
-    "   [0.55, 0.87, 0.66], # journey  (x^2)\n",
-    "   [0.57, 0.85, 0.64], # starts   (x^3)\n",
-    "   [0.22, 0.58, 0.33], # with     (x^4)\n",
-    "   [0.77, 0.25, 0.10], # one      (x^5)\n",
-    "   [0.05, 0.80, 0.55]] # step     (x^6)\n",
+    "    [\n",
+    "        [0.43, 0.15, 0.89],  # Your     (x^1)\n",
+    "        [0.55, 0.87, 0.66],  # journey  (x^2)\n",
+    "        [0.57, 0.85, 0.64],  # starts   (x^3)\n",
+    "        [0.22, 0.58, 0.33],  # with     (x^4)\n",
+    "        [0.77, 0.25, 0.10],  # one      (x^5)\n",
+    "        [0.05, 0.80, 0.55],\n",
+    "    ]  # step     (x^6)\n",
     ")"
    ]
   },
@@ -54,11 +57,11 @@
     }
    ],
    "source": [
-    "query = inputs[1]                            #1\n",
+    "query = inputs[1]  # 1\n",
     "attn_scores_2 = torch.empty(inputs.shape[0])\n",
     "print(f\"query: {query}\")\n",
     "for i, x_i in enumerate(inputs):\n",
-    "    attn_scores_2[i] = x_i.dot(query) # torch.dot(x_i, query) - both are same.\n",
+    "    attn_scores_2[i] = x_i.dot(query)  # torch.dot(x_i, query) - both are same.\n",
     "    print(f\"x_{i} : {x_i}, dot: {attn_scores_2[i]}\")\n",
     "print(attn_scores_2)"
    ]
@@ -119,8 +122,8 @@
    "source": [
     "query = inputs[1]\n",
     "context_vec_2 = torch.zeros(query.shape)\n",
-    "for i,x_i in enumerate(inputs):\n",
-    "    context_vec_2 += attn_weights_2[i]*x_i\n",
+    "for i, x_i in enumerate(inputs):\n",
+    "    context_vec_2 += attn_weights_2[i] * x_i\n",
     "print(context_vec_2)"
    ]
   },
@@ -226,8 +229,8 @@
     }
    ],
    "source": [
-    "a = torch.tensor([1,2,3]) \n",
-    "b = torch.tensor([4,5,7])\n",
+    "a = torch.tensor([1, 2, 3])\n",
+    "b = torch.tensor([4, 5, 7])\n",
     "print(\"> a\", a)\n",
     "print(\"> b\", a)\n",
     "\n",
@@ -238,7 +241,7 @@
     "# .T only well defined for 2-D tensor\n",
     "print(\"> c.T\", c.T)\n",
     "\n",
-    "# .T on other dimentions tensors is not defined and will be removed \n",
+    "# .T on other dimentions tensors is not defined and will be removed\n",
     "# in later releases.\n",
     "# You can, however, use torch.permuate(...)\n",
     "# print(\"> a.T\", a.T) -- in older torch just returns a\n",
@@ -259,12 +262,10 @@
     "\n",
     "# What does a.T or b.T do?\n",
     "\n",
-    "# This gives s \n",
+    "# This gives s\n",
     "\n",
     "# What does @ do exactly?\n",
-    "print(\"> a@b\", a @ b)\n",
-    "\n",
-    "\n"
+    "print(\"> a@b\", a @ b)"
    ]
   },
   {
@@ -313,7 +314,7 @@
     "print(all_context_vecs)\n",
     "\n",
     "# * In this simple case we did (X.X^T)X\n",
-    "# * Where normally you do ( (QX) (KX)^T ) V X \n",
+    "# * Where normally you do ( (QX) (KX)^T ) V X\n",
     "#\n",
     "# Why don't we just optimize for QK^T directory, rather than introducing\n",
     "# Q and K separately?"
@@ -332,9 +333,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_2 = inputs[1]     #1\n",
-    "d_in = inputs.shape[1]      #2\n",
-    "d_out = 2         #3"
+    "x_2 = inputs[1]  # 1\n",
+    "d_in = inputs.shape[1]  # 2\n",
+    "d_out = 2  # 3"
    ]
   },
   {
@@ -345,8 +346,8 @@
    "source": [
     "torch.manual_seed(123)\n",
     "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
-    "W_key   = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
-    "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)  "
+    "W_key = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)"
    ]
   },
   {
@@ -379,13 +380,13 @@
     "print(W_query.shape)\n",
     "print(W_query.data)\n",
     "\n",
-    "print(torch.tensor([1., 0, 0]) @ W_query)\n",
-    "print(torch.tensor([0., 1, 0]) @ W_query)\n",
-    "print(torch.tensor([1., 0, 1]) @ W_query)\n",
+    "print(torch.tensor([1.0, 0, 0]) @ W_query)\n",
+    "print(torch.tensor([0.0, 1, 0]) @ W_query)\n",
+    "print(torch.tensor([1.0, 0, 1]) @ W_query)\n",
     "\n",
     "print(\"\\n- Compute Query_2\")\n",
-    "query_2 = x_2 @ W_query \n",
-    "key_2 = x_2 @ W_key \n",
+    "query_2 = x_2 @ W_query\n",
+    "key_2 = x_2 @ W_key\n",
     "value_2 = x_2 @ W_value\n",
     "print(query_2)"
    ]
@@ -406,7 +407,7 @@
     }
    ],
    "source": [
-    "keys = inputs @ W_key \n",
+    "keys = inputs @ W_key\n",
     "values = inputs @ W_value\n",
     "queries = inputs @ W_query\n",
     "print(\"keys.shape:\", keys.shape)\n",
@@ -428,7 +429,7 @@
     }
    ],
    "source": [
-    "keys_2 = keys[1]             #1\n",
+    "keys_2 = keys[1]  # 1\n",
     "attn_score_22 = query_2.dot(keys_2)\n",
     "print(attn_score_22)"
    ]
@@ -502,7 +503,7 @@
     "print(\"attn_weights_2=\", attn_weights_2)\n",
     "\n",
     "context_vec_2 = attn_weights_2 @ values\n",
-    "print(\"context_vec_2=\", context_vec_2)\n"
+    "print(\"context_vec_2=\", context_vec_2)"
    ]
   },
   {
@@ -514,21 +515,20 @@
     "import torch.nn as nn\n",
     "import torch\n",
     "\n",
+    "\n",
     "class SelfAttention_v1(nn.Module):\n",
-    "    def __init__(self, d_in : int, d_out : int) -> None:\n",
+    "    def __init__(self, d_in: int, d_out: int) -> None:\n",
     "        super().__init__()\n",
     "        self.W_query = nn.Parameter(torch.rand(d_in, d_out))\n",
-    "        self.W_key   = nn.Parameter(torch.rand(d_in, d_out))\n",
+    "        self.W_key = nn.Parameter(torch.rand(d_in, d_out))\n",
     "        self.W_value = nn.Parameter(torch.rand(d_in, d_out))\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        keys = x @ self.W_key\n",
     "        queries = x @ self.W_query\n",
     "        values = x @ self.W_value\n",
-    "        attn_scores = queries @ keys.T # omega\n",
-    "        attn_weights = torch.softmax(\n",
-    "            attn_scores / keys.shape[-1]**0.5, dim=-1\n",
-    "        )\n",
+    "        attn_scores = queries @ keys.T  # omega\n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1] ** 0.5, dim=-1)\n",
     "        context_vec = attn_weights @ values\n",
     "        return context_vec"
    ]
