Add calculator boilerplate

--- a/recommender/gnn/gnn.ipynb
+++ b/recommender/gnn/gnn.ipynb
@@ -20,10 +20,13 @@
     "from torch_geometric.nn import GCNConv\n",
     "\n",
     "# Define a simple graph with 4 nodes\n",
-    "edge_index = torch.tensor([\n",
-    "    [0, 1, 1, 2, 2, 3],  # From\n",
-    "    [1, 0, 2, 1, 3, 2]   # To\n",
-    "], dtype=torch.long)  # Each pair represents an edge\n",
+    "edge_index = torch.tensor(\n",
+    "    [\n",
+    "        [0, 1, 1, 2, 2, 3],  # From\n",
+    "        [1, 0, 2, 1, 3, 2],  # To\n",
+    "    ],\n",
+    "    dtype=torch.long,\n",
+    ")  # Each pair represents an edge\n",
     "\n",
     "# Features for each node (random for simplicity)\n",
     "x = torch.rand((4, 3))  # 4 nodes, each with a 3-dimensional feature\n",
@@ -52,19 +55,20 @@
    ],
    "source": [
     "import torch.nn as nn\n",
-    "from torch_geometric.nn import GCNConv\n",
+    "\n",
     "\n",
     "class SimpleGNN(nn.Module):\n",
     "    def __init__(self, in_features, hidden_dim, out_features):\n",
     "        super().__init__()\n",
     "        self.conv1 = GCNConv(in_features, hidden_dim)  # First graph conv layer\n",
-    "        self.conv2 = GCNConv(hidden_dim, out_features) # Second graph conv layer\n",
+    "        self.conv2 = GCNConv(hidden_dim, out_features)  # Second graph conv layer\n",
     "\n",
     "    def forward(self, x, edge_index):\n",
     "        x = self.conv1(x, edge_index)  # Message passing step 1\n",
-    "        x = F.relu(x)                  # Apply activation function\n",
+    "        x = F.relu(x)  # Apply activation function\n",
     "        x = self.conv2(x, edge_index)  # Message passing step 2\n",
     "        return x\n",
+    "\n",
     "\n",
     "# Create the model\n",
     "model = SimpleGNN(in_features=3, hidden_dim=5, out_features=2)\n",
