Enable import sorting

--- a/llm_from_scratch/c5/c5.ipynb
+++ b/llm_from_scratch/c5/c5.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from llm_from_scratch.c4 import GPTModel, GPTConfig\n",
+    "\n",
+    "from llm_from_scratch.c4 import GPTConfig, GPTModel\n",
     "\n",
     "# 1 We shorten the context length from 1,024 to 256 tokens.\n",
     "# 2 It’s possible and common to set dropout to 0.\n",
@@ -42,6 +43,7 @@
    ],
    "source": [
     "import tiktoken\n",
+    "\n",
     "from llm_from_scratch.c4 import generate_text_simple\n",
     "from llm_from_scratch.c5 import text_to_token_ids, token_ids_to_text\n",
     "\n",
